--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 
     <!-- WhatsApp 联系方式 -->
     <a class="link" href="https://wa.me/85253630941" target="_blank">💬 Get free itinerary via WhatsApp</a>
- <!-- 邮箱-->
-    <a class="link" href=" sundatravel88@gmail.com" target="_blank">💬Contact me via email</a>
+
+   <!-- 谷歌邮箱联系方式 -->
+    <a class="link" href="mailto:sundatravel88@gmail.com">📧 Contact us via Email (Gmail)</a>
     <!-- 你可以继续添加更多链接 -->
     <!-- <a class="link" href="https://facebook.com">Facebook</a> -->
 
