--- a/wechat.html
+++ b/wechat.html
@@ -47,7 +47,10 @@
   <div class="box">
     <img src="wechat-qr.png" alt="WeChat QR Code">
     <h1>Add us on WeChat</h1>
-    <p>Long press or scan the QR code to add us</p>
+    <p>
+  Long press the QR code to add us on WeChat<br>
+  or save the image and scan it in WeChat
+</p>
     <div class="id">WeChat ID: MC541920</div>
   </div>
 </body>
